[project]
name = "youtube_video_summarizer"
version = "0.1.0"
description = "YouTube-Video-summarizer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0"
]

[project.scripts]
youtube_video_summarizer = "youtube_video_summarizer.main:run"
run_crew = "youtube_video_summarizer.main:run"
train = "youtube_video_summarizer.main:train"
replay = "youtube_video_summarizer.main:replay"
test = "youtube_video_summarizer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
